--- a/style.css
+++ b/style.css
@@ -1,24 +1,6 @@
-/* Custom CSS for the cursor effect */
-.cursor {
-    animation: blink 0.7s infinite;
-  }
-  
-  @keyframes blink {
-    50% {
-      opacity: 0;
-    }
-  }
-  
-  /* Custom CSS for fading in the content */
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-  
-  .animate-fadeIn {
-    animation: fadeIn 1s ease-in-out;
-  }
+.parent-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
